add exercises crud
