# app/Http/Controllers/Api/ExerciseController.php
@@ -3,27 +3,27 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
-use App\Http\Requests\Users\StoreUserRequest;
-use App\Http\Requests\Users\UpdateUserRequest;
-use App\Http\Resources\UserResource;
-use App\Models\User;
+use App\Http\Requests\Exercises\StoreExerciseRequest;
+use App\Http\Requests\Exercises\UpdateExerciseRequest;
+use App\Http\Resources\ExerciseResource;
+use App\Models\Exercise;
 use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Response;
 
-class UserController extends Controller
+class ExerciseController extends Controller
 {
     /**
      * @OA\Get(
-     *      path="/api/users",
-     *      operationId="getUsers",
-     *      tags={"Users"},
-     *      summary="Get list of users",
-     *      description="Returns list of users",
+     *      path="/api/exercises",
+     *      operationId="getExercises",
+     *      tags={"Exercises"},
+     *      summary="Get list of exercises",
+     *      description="Returns list of exercises",
      *      @OA\Response(
      *          response=200,
      *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/UserResource")
+     *          @OA\JsonContent(ref="#/components/schemas/ExerciseResource")
      *       ),
      *      @OA\Response(
      *          response=401,
@@ -41,19 +41,19 @@ class UserController extends Controller
      */
     public function index(): JsonResponse
     {
-        return new JsonResponse(UserResource::collection(User::all()));
+        return new JsonResponse(ExerciseResource::collection(Exercise::all()));
     }
 
     /**
      * @OA\Get(
-     *      path="/api/users/{id}",
-     *      operationId="getUserById",
-     *      tags={"Users"},
-     *      summary="Get user information",
-     *      description="Returns user data",
+     *      path="/api/exercises/{id}",
+     *      operationId="getExerciseById",
+     *      tags={"Exercises"},
+     *      summary="Get exercise information",
+     *      description="Returns exercise data",
      *      @OA\Parameter(
      *          name="id",
-     *          description="User id",
+     *          description="Exercise id",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -63,7 +63,7 @@ class UserController extends Controller
      *      @OA\Response(
      *          response=200,
      *          description="Successful operation",
-     *          @OA\JsonContent(ref="#/components/schemas/UserResource")
+     *          @OA\JsonContent(ref="#/components/schemas/ExerciseResource")
      *       ),
      *      @OA\Response(
      *          response=400,
@@ -86,12 +86,12 @@ class UserController extends Controller
     public function get(int $id): JsonResponse
     {
         try {
-            $user = new UserResource(User::findOrFail($id));
+            $user = new ExerciseResource(Exercise::findOrFail($id));
         } catch (ModelNotFoundException $exception) {
             return new JsonResponse([
                 $exception->getMessage(),
                 $exception->getTraceAsString(),
-                'User by id ' . $id . ' not found',
+                'Exercise by id ' . $id . ' not found',
             ], 404);
         }
         return new JsonResponse($user);
@@ -100,19 +100,19 @@ class UserController extends Controller
     /**
      *
      * @OA\Post(
-     *     path="/api/users",
-     *     operationId="storeUser",
-     *     tags={"Users"},
-     *     summary="Store new user",
-     *     description="Returns new created user",
+     *     path="/api/exercises",
+     *     operationId="storeExercise",
+     *     tags={"Exercises"},
+     *     summary="Store new exercise",
+     *     description="Returns new created exercise",
      *     @OA\RequestBody(
      *         required=true,
-     *         @OA\JsonContent(ref="#/components/schemas/StoreUserRequest")
+     *         @OA\JsonContent(ref="#/components/schemas/StoreExerciseRequest")
      *     ),
      *     @OA\Response(
      *         response=201,
      *         description="Successful operation",
-     *         @OA\JsonContent(ref="#/components/schemas/UserResource")
+     *         @OA\JsonContent(ref="#/components/schemas/ExerciseResource")
      *      ),
      *      @OA\Response(
      *          response=400,
@@ -131,33 +131,33 @@ class UserController extends Controller
      *         description="Error",
      *     ),
      * )
-     * @param StoreUserRequest $request
+     * @param StoreExerciseRequest $request
      *
      * @return JsonResponse
      */
-    public function store(StoreUserRequest $request): JsonResponse
+    public function store(StoreExerciseRequest $request): JsonResponse
     {
-        $user = User::create($request->validated());
-        return new JsonResponse(new UserResource($user), 201);
+        $user = Exercise::create($request->validated());
+        return new JsonResponse(new ExerciseResource($user), 201);
     }
 
     /**
      * Update resource.
      *
      * @OA\PUT(
-     *     path="/api/users/{id}",
-     *     operationId="updateUser",
-     *     tags={"Users"},
-     *     summary="Update user",
-     *     description="Returns updated user",
+     *     path="/api/exercises/{id}",
+     *     operationId="updateExercise",
+     *     tags={"Exercises"},
+     *     summary="Update exercise",
+     *     description="Returns updated exercise",
      *     @OA\RequestBody(
      *         required=false,
-     *         @OA\JsonContent(ref="#/components/schemas/UpdateUserRequest")
+     *         @OA\JsonContent(ref="#/components/schemas/UpdateExerciseRequest")
      *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Successful operation",
-     *         @OA\JsonContent(ref="#/components/schemas/UserResource")
+     *         @OA\JsonContent(ref="#/components/schemas/ExerciseResource")
      *      ),
      *      @OA\Response(
      *          response=400,
@@ -176,43 +176,42 @@ class UserController extends Controller
      *         description="Error",
      *     ),
      * )
-     * @param UpdateUserRequest $request
+     * @param UpdateExerciseRequest $request
      * @param int $id
      *
      * @return \Illuminate\Http\JsonResponse
      */
-    public function update(UpdateUserRequest $request, int $id): JsonResponse
+    public function update(UpdateExerciseRequest $request, int $id): JsonResponse
     {
         try {
-            $user = User::findOrFail($id)->update($request->validated());
+            Exercise::findOrFail($id)->update($request->validated());
         } catch (ModelNotFoundException $exception) {
             return new JsonResponse([
                 $exception->getMessage(),
                 $exception->getTraceAsString(),
-                'message' => 'Can not update user by id ' . $id,
+                'message' => 'Can not update exercise by id ' . $id,
             ], 404);
         }
 
         return new JsonResponse(
             [
-                'message' => "User - {$id} is updated",
+                'message' => "Exercise - {$id} is updated",
                 'success' => true,
-            ],
-            202);
+            ], 202);
     }
 
     /**
      * Delete resource from storage.
      *
      * @OA\Delete(
-     *      path="/api/user/{id}",
-     *      operationId="deleteUser",
-     *      tags={"Users"},
-     *      summary="Delete existing user",
+     *      path="/api/exercises/{id}",
+     *      operationId="deleteExercise",
+     *      tags={"Exercises"},
+     *      summary="Delete existing exercise",
      *      description="Deletes a record and returns no content",
      *      @OA\Parameter(
      *          name="id",
-     *          description="User id",
+     *          description="Exercise id",
      *          required=true,
      *          in="path",
      *          @OA\Schema(
@@ -245,12 +244,12 @@ class UserController extends Controller
     public function delete(int $id): JsonResponse
     {
         try {
-            User::findOrFail($id)->delete();
+            Exercise::findOrFail($id)->delete();
         } catch (ModelNotFoundException $exception) {
             return new JsonResponse([
                 $exception->getMessage(),
                 $exception->getTraceAsString(),
-                'message' => 'Can not delete user by id ' . $id,
+                'message' => 'Can not delete exercise by id ' . $id,
             ], 404);
         }
 
